Change History
==============

1.5rc1
------

 - Prevent creation of sample content when forms are imported from
   .zexp or schemas are recreated. (Fixes #218; Thanks Marie Robichon)

 - Added warning on startup if PFGCaptchaField is still installed.
   (David Glick)

 - The captcha field edit should not show default, length ...
   fields that are not relevant. (Steve)

 - If mail adapter received a UTF-8 subject where it expected unicode,
   a unicode decode error would result. Fixed. (Thanks, javimansilla)
   (merge from 1.2-Maintenance branch)

 - Corrected URL for audio captcha icon. (David Glick)

 - Added the CHANGES.txt to the long_description so that it show up on
   pypi, Hello World!  Also cleaned up the reST so that it will render 
   properly (claytron)

1.5b5
-----

 - Fix bad eggification of 1.5b4.

1.5b4
-----

 - Changed a few field titles to friendlier names: boolean -> checkbox,
   integer -> whole number, fixed-point -> decimal number. (Steve McMahon)

 - Merged branches/davisagli-captcha, providing a CAPTCHA field utilizing
   either collective.captcha or collective.recaptcha. (Thanks, David Glick!)
   
 - Reworked install strategy for allowed content types for form folders and
   fieldsets to determine what's allowed by interfaces rather than GS profile.
   This makes it much easier to add fields, adapters and thanks pages from
   outside. (Steve McMahon)
   
 - Fixed a problem with boolean fields in later Zope/Archetypes. (Tracker
   #244)

 - QuickEdit got mixed up with fields that themselves contain
   tables. Fixed. (Steve McMahon)

 - When using Zope 2.9.10 and Plone 2.5.x, form validation would produce an
   Unauthorized error in fgvalidate_base. Fixed.
   (Tracker #233; Thanks, Jean-Pascal Houde)

 - Moved PFGDataGrid from examples/ to be a separate product.
   (Steve McMahon)

 - Make uninstall work cleanly even if Kupu has bad linkable types.
   (Steve McMahon)
